# static-discord-bot

./: Cargo.toml
resources/: changelog.toml
src/: main.rs
src/commands/: changelog.rs  charge.rs  mod.rs  ping.rs  sermon.rs  sermon.toml  static_audio.rs  static_image.rs
src/generators/: mod.rs
src/generators/audio/: mod.rs
src/generators/image/: mod.rs  white_noise.rs
