[package]
name = "staticbot"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
hound = "3.5.1"
image = "0.25.6"
itertools = "0.14.0"
poise = "0.6.1"
rand = "0.9.1"
serde = "1.0.219"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder"] }
strfmt = "0.2.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
